# Copy-handler

./: ch.vc90.sln  readme.build.txt  roadmap.txt
scripts/: readme.txt  release_checklist.txt  setup.iss
scripts/internal/: clear_env.bat  detect_internal_version.bat  detect_version.bat  embed_srcserver_info.bat  prepare_env.bat  replace_version.vbs  svntag.bat  svntag_single.bat
src/ch/: AboutDlg.cpp  AboutDlg.h  AppHelper.cpp  AppHelper.h  BufferSizeDlg.cpp  BufferSizeDlg.h  CfgProperties.cpp  CfgProperties.h  ClipboardMonitor.cpp  ClipboardMonitor.h  CrashDlg.cpp  CrashDlg.h  CustomCopyDlg.cpp  CustomCopyDlg.h  DataBuffer.cpp  DataBuffer.h  DestPath.cpp  DestPath.h  Device IO.h  Dialogs.cpp  Dialogs.h  DirTreeCtrl.cpp  DirTreeCtrl.h  DstFileErrorDlg.h  FFListCtrl.cpp  FFListCtrl.h  FeedbackFileErrorDlg.cpp  FeedbackFileErrorDlg.h  FeedbackHandler.cpp  FeedbackHandler.h  FeedbackNotEnoughSpaceDlg.cpp  FeedbackNotEnoughSpaceDlg.h  FeedbackReplaceDlg.cpp  FeedbackReplaceDlg.h  FileFilter.cpp  FileFilter.h  FileInfo.cpp  FileInfo.h  FilterDlg.cpp  FilterDlg.h  (+57 more)
src/chext/: MenuExt.h  (+30 more)
src/libicpf/: Makefile.am  buffer.h  callback.cpp  callback.h  cfg.cpp  cfg.h  cfg_ini.cpp  cfg_ini.h  cfg_xml.cpp  cfg_xml.h  circ_buffer.cpp  circ_buffer.h  config_base.h  config_property.cpp  config_property.h  conv.cpp  conv.h  crc32.cpp  crc32.h  dmutex.cpp  dmutex.h  dumpctx.cpp  dumpctx.h  err_codes.h  exception.cpp  exception.h  file.cpp  file.h  gen_types.h  interface.h  libicpf.cpp  libicpf.h  libicpf.vc90.vcproj  log.cpp  log.h  macros.h  module.cpp  module.h  mutex.cpp  mutex.h  (+2 more)
(+186 files in other folders)
